# FH07

./: .gitignore  README.md  meson.build  serial_log.csv
ble_node_proj/: CMakeLists.txt  nrf54l15dk_nrf54l15_cpuapp_ns.overlay  prj.conf
ble_node_proj/boards/: nrf54l15dk_nrf54l15_cpuapp_ns.dts
ble_node_proj/lib/: CMakeLists.txt
ble_node_proj/lib/ble/: CMakeLists.txt  ble.h
ble_node_proj/src/: main.c
hw/Part_Libraries/: ME54BS01-1Y15TI.PcbLib  ME54BS01-1Y15TI.Schlib
hw/fh07_node/: fh07_node.kicad_prl  fh07_node.kicad_pro  fh07_node.kicad_sch  fp-info-cache  fp-lib-table  nrf_mcu.kicad_sch  power_converter.kicad_sch  sensors.kicad_sch  sym-lib-table  ~fh07_node.kicad_sch.lck
mock_transmiter/: .gitignore  README.md  main.py  pyproject.toml
mock_transmiter/src/: messages_builder.py
mock_transmiter/src/bluetooth/: __init__.py  bluetooth.py
mock_transmiter/test_data/: serial_log.csv
sw/message_formats/: README.md  device_link.fbs  meson.build
sw/message_formats/imu_messages/: imu_data.fbs  types.fbs
web_app/: app.html  index.html  outlier_detection.html
